# RoboRTS

./: .gitignore  CMakeLists.txt  README.md  package.xml
armor_detector/src/: detector.cpp  detector.hpp  main.cpp
armor_detector/src/kcfcpp/: kcftracker.cpp  recttools.hpp
icra_robomaster_emulator/launch/: generate_perfect_map.launch
icra_robomaster_emulator/robots/: infantry_base.xacro
icra_robomaster_emulator/wall-2020/icra_ground_plane/: model.sdf
icra_robomaster_emulator/worlds/: ICRA_2020.world
pose_params/: a_1024x768.xml  a_1920x1080.xml
pose_params/a/: 1024x768.xml  640x480.xml  800x600.xml
roborts/: package.xml
roborts_base/include/: chassis.h  config.h  gimbal.h  ros_dep.h
roborts_base/launch/: base.launch
roborts_base/roborts_sdk/include/: protocol_content.h
roborts_base/src/: chassis.cpp  gimbal.cpp  referee_system.cpp
roborts_bringup/: CMakeLists.txt  package.xml
roborts_bringup/config/: laser_filter.yaml
roborts_bringup/config/costmap/: common.yaml
roborts_bringup/config/planner/: local.yaml
roborts_bringup/launch/: aiming.launch  base.launch  laser_filter.launch  lidar.launch  localization.launch  mapping.launch  mapping_stage.launch  planning.launch  real_robot.launch  roborts.launch  roborts_stage.launch  slam.launch  stage.launch  static_tf.launch
roborts_bringup/maps/: icra2021-full.pgm  icra2021-full.yaml  icra2021.pgm  icra2021.yaml
roborts_bringup/rviz/: mapping.rviz  roborts.rviz
roborts_bringup/worlds/: icra2021.world
roborts_camera/: CMakeLists.txt
roborts_camera/test/: image_capture.cpp
roborts_common/math/: geometry.h  math.h
roborts_costmap/config/: buff_layer_config.prototxt  costmap_parameter_config_for_decision.prototxt  costmap_parameter_config_for_global_plan.prototxt  costmap_parameter_config_for_local_plan.prototxt  obstacle_layer_config.prototxt
roborts_costmap/include/costmap/: buff_layer.h  costmap_interface.h
roborts_costmap/proto/: buff_layer_setting.proto  costmap_parameter_setting.proto
roborts_costmap/src/: buff_layer.cpp  costmap_interface.cpp
roborts_decision/: CMakeLists.txt
roborts_decision/blackboard/: blackboard.cpp  field.cpp  field.h
roborts_decision/executor/: chassis_executor.h
roborts_detection/: CMakeLists.txt
roborts_detection/armor_detection/: armor_detection_node.h
roborts_localization/config/: localization.yaml
roborts_msgs/: CMakeLists.txt
roborts_msgs/msg/: BuffZoneStatus.msg
roborts_msgs/msg/chassis/: CurrentLimit.msg
roborts_msgs/msg/gimbal/: GimbalInfo.msg  YawFocus.msg
roborts_msgs/msg/referee_system/: RobotStatus.msg
roborts_planning/global_planner/a_star_planner/: a_star_planner.cpp
roborts_planning/local_planner/: CMakeLists.txt
roborts_planning/local_planner/src/: local_planner_test.cpp
roborts_planning/local_planner/timed_elastic_band/config/: timed_elastic_band.prototxt
roborts_planning/local_planner/timed_elastic_band/src/: teb_optimal.cpp
roborts_tracking/: tracking_test.cpp  tracking_utility.cpp
robot_info_publisher/: CMakeLists.txt  package.xml
robot_info_publisher/src/: main.cpp
shoot_controller/: .gitignore  CMakeLists.txt  package.xml
shoot_controller/src/: main.cpp  trajectory.cpp  trajectory.hpp  trajectory_solver.cpp  trajectory_solver.hpp
shoot_controller/src/controller/: lookout_adapter.cpp  lookout_adapter.hpp  main.cpp  shoot_controller.cpp  shoot_controller.hpp  speed_monitor.cpp  speed_monitor.hpp  trajectory_solver.cpp  trajectory_solver.hpp
shoot_controller/src/fric_wheel_control/: fric_wheel_control.cpp
shoot_controller/src/pitch_calibration/: pitch_calibration.cpp
shoot_controller/src/visualization/: trajectory_visualization.cpp
simple_decision/: CMakeLists.txt  package.xml
simple_decision/src/: chassis_rotation.cpp  chassis_rotation.hpp  decision_node.cpp  decision_node.hpp  goal_executor.cpp  goal_executor.hpp  goals.hpp  lookout_adapter.cpp  lookout_adapter.hpp  main.cpp
src/: detector.cpp  detector.hpp  filesystem_support.hpp  main.cpp  pose_solver.cpp  pose_solver.h  serial.cpp  serial.h
src/seu-detect/Armor/: ArmorDetector.cpp  ArmorDetector.h
